--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   google_sign_in: 5.4.1
   firebase_auth: 3.6.4
   cloud_firestore: 3.4.5
+  google_maps_flutter: 2.1.12
   flutter: 
     sdk: flutter
 
