--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   cloud_firestore: 3.4.5
   google_maps_flutter: 2.1.12
   google_map_polyline_new: 0.3.0+2
-  flutter:
+  date_time_picker: 2.1.0
+  syncfusion_flutter_datepicker: 20.2.44
+  flutter: 
     sdk: flutter
 
 dev_dependencies: 
