--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_map_polyline_new: 0.3.0+2
   date_time_picker: 2.1.0
   syncfusion_flutter_datepicker: 20.2.44
+  flutter_signin_button: 2.0.0
+  http: 0.13.5
   flutter: 
     sdk: flutter
 
