--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,12 @@ dependencies:
   cloud_firestore: 3.4.5
   google_maps_flutter: 2.1.12
   google_map_polyline_new: 0.3.0+2
-  date_time_picker: 2.1.0
   syncfusion_flutter_datepicker: 20.2.44
   flutter_signin_button: 2.0.0
   http: 0.13.5
+  geocoder2: 1.3.0
+  easy_autocomplete: 1.6.0
+  flutter_native_splash: 2.2.7
   flutter: 
     sdk: flutter
 
@@ -27,5 +29,12 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
+  assets: 
+    - assets/image/
   uses-material-design: true
+
+
+flutter_native_splash:
+  background_image: "assets/image/background.png"
+
 
